# project-templates

./: LICENSE  README.md
go/: README.md  go.mod  project.go
python/: README.md  pyproject.toml
python/project/: __init__.py  project.py
